--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -1,11 +1,60 @@
+html,
+body {
+  height: 100%;
+}
+
+* {
+  box-sizing: border-box;
+}
+
 body {
   color: $default;
   font-size: 16px;
   line-height: 26px;
   @extend %quicksand-500;
+  display: flex;
+  flex-direction: column;
 }
+
+.main {
+  flex-grow: 1;
+}
+
 .container {
   max-width: 1200px;
   margin: 0 auto;
   padding: 0 15px;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+a {
+  text-decoration: none;
+  color: $default;
+  font-size: 16px;
+  line-height: 26px;
+  @extend %quicksand-500;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  padding: 0;
+  margin: 0;
+}
+
+p {
+  margin: 0;
+  padding: 0;
+}
+
+img {
+  display: block;
 }
