--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -23,19 +23,19 @@
     text-transform: uppercase;
     text-decoration: none;
     color: $title;
-    padding-bottom: 1px;
+    padding-bottom: 0 2px 1px;
     transition: all 0.3s ease;
-    @extend %quicksand-400;
+    @extend %roboto-400;
     &:hover {
       color: $accent;
       border-bottom: 1px solid $accent;
-      @extend %quicksand-500;
+      @extend %roboto-700;
     }
   }
   &__list-link--active {
     color: $accent;
     border-bottom: 1px solid $accent;
-    @extend %quicksand-500;
+    @extend %roboto-700;
   }
 }
 
