--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -58,3 +58,19 @@ p {
 img {
   display: block;
 }
+
+.title {
+  font-size: 48px;
+  line-height: 65px;
+  @extend %roboto-700;
+  color: $title;
+  margin-bottom: 10px;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.text {
+  text-align: center;
+  max-width: 570px;
+  margin: 0 auto 55px;
+}
