--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -340,5 +340,47 @@ footer {
     transition: all 0.3s ease;
   }
 }
+.video-fashion {
+  background-color: $bg;
+  background-image: url("../images/decor/pattern.svg");
+  background-size: cover;
+  background-position: top center;
+  background-repeat: no-repeat;
+  padding: 125px 0;
+  &__inner {
+    display: flex;
+  }
+  &__popup {
+    display: flex;
+    margin-right: 60px;
+    max-width: 530px;
+    width: 100%;
+    height: 480px;
+    justify-content: center;
+    align-items: center;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+  }
+  &__content {
+    max-width: 570px;
+  }
+  &__subtitle {
+    font-size: 22px;
+    color: $accent;
+    padding-top: 75px;
+    text-transform: uppercase;
+    margin-bottom: 5px;
+  }
+  &__title {
+    text-align-last: left;
+  }
+  &__text {
+    margin-bottom: 55px;
+  }
+  &__link {
+    @extend %btn;
+  }
+}
 
 @import "media";
