--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -157,6 +157,19 @@ footer {
   }
 }
 
+.top {
+  &__container {
+    max-width: 1700px;
+    margin: 0 auto;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: top center;
+    background-image: url("../images/top-bg.jpg");
+    padding: 120px 0 130px;
+    text-align: center;
+  }
+}
+
 .top-slider {
   background-image: url("../images/decor/top-slider-bg.png");
   background-repeat: no-repeat;
@@ -660,6 +673,55 @@ footer {
     position: absolute;
     top: 7px;
     right: -15px;
+  }
+}
+
+.modal {
+  max-width: 570px;
+  margin: 0 auto;
+  padding-top: 100px;
+  &__links {
+    text-align: center;
+    margin-bottom: 40px;
+  }
+
+  &__link {
+    color: #909090;
+    font-size: 22px;
+    @extend %roboto-400;
+    text-transform: uppercase;
+    margin: 0 30px;
+  }
+
+  &__link--active {
+    color: $accent;
+  }
+
+  &__label {
+    margin-bottom: 30px;
+    display: block;
+  }
+
+  &__input {
+    display: block;
+    width: 100%;
+    border: none;
+    background-color: $bg;
+    margin-top: 4px;
+    height: 60px;
+    padding: 0 15px;
+  }
+
+  &__btn {
+    background-color: $title;
+    text-transform: uppercase;
+    display: block;
+    color: #fff;
+    @extend %roboto-400;
+    padding: 14px 0;
+    border: none;
+    width: 100%;
+    cursor: pointer;
   }
 }
 @import "media";
