--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -723,5 +723,15 @@ footer {
     width: 100%;
     cursor: pointer;
   }
+
+  &__error {
+    color: $accent;
+    margin-top: 12px;
+    display: inline-block;
+  }
+
+  &__text {
+    margin-bottom: 25px;
+  }
 }
 @import "media";
