--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -734,4 +734,34 @@ footer {
     margin-bottom: 25px;
   }
 }
+
+.page-404 {
+  padding: 110px 0 120px;
+  &__inner {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  &__content {
+    max-width: 570px;
+    width: 100%;
+  }
+
+  &__title {
+    color: #28384f;
+    margin-bottom: 4 0px;
+    @extend %roboto-700;
+    font-size: 48px;
+  }
+
+  &__text {
+    margin-bottom: 55px;
+    max-width: 470px;
+  }
+  &__link {
+    @extend %btn;
+    padding: 14px 35px;
+  }
+}
 @import "media";
